css/full-width-pics.css
/*!
 * Start Bootstrap - Full Width Pics (https://startbootstrap.com/template-overviews/full-width-pics)
 * Copyright 2013-2017 Start Bootstrap
 * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-full-width-pics/blob/master/LICENSE)
 */

body {
  padding-top: 54px;
  font-family: 'Open Sans', sans-serif;
  padding-top: 120px;
}

/*1200 hamburger breakpoint */

@media (max-width: 428px) {
    .navbar-brand {
        width: 80%;
    }
}


@media (min-width: 768px) and (max-width: 1200px) {
   #navbarResponsive {
       display: none !important;
   }
   #navbarBurger {
       display: block !important;
   }
}


header img {
    width: 100%;
}

.container-wide {
  padding-left: 0px;
  padding-right: 0px;
}

.nav-link-spaced .nav-item {
  margin-left: 10pt;
  margin-right: 10pt;
  font-size: 14pt;
  text-transform: uppercase;
}

.bg-black {
  background-color: #000 !important;
}

.bg-image-full {
  background: no-repeat center center scroll;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
  background-position: center top;
}

section {
  background: #000;
  color: #ddd;
  position:relative;
  padding-top: 30pt;
  padding-bottom: 30pt;
}

.text-center {
  text-align: center;
}

.timetable h1 {
  text-align: left;
}

.timeline {
    margin-top: 20pt;
    background-repeat:repeat-y;
    background-position:20%;
    list-style: none;
    padding-left: 0;
}

.timeline li {
    margin-bottom: 60pt;
}

.timeline-time {
    width: 20%;
    text-align: right;
    padding-right: 30pt;
    float:left;
    font-size:18pt;
    font-weight: bolder;
}

.timeline-abstract {
    padding-top:30pt;
}

.timeline-abstract h3 {
    font-size:18pt;
    font-weight: bolder;
    margin-bottom: 15pt;
}

.timeline-abstract p {
    padding-left: 30pt;
    font-style: italic;
    font-size: 14pt;
}


.timeline-circle-parent {
    float:left;
    position: relative
}

.timeline-circle {
    position:absolute;
    top: -1px;
    left: -14pt;
    width: 28pt;
    height: 28pt;
    border:solid;
    border-radius: 100%;
    color: #2e719d;
    background-color: #2e719d;
}

.timeline-text {
    padding-left: 30pt;
    width: 80%;
    float: left;
    font-size:16pt;
}

.speaker h1 {
  text-align: right;
  padding-right: 10%;
  padding-bottom: 30pt;
}

.speaker-text {
  position: relative;
  padding-top: 90pt;
}

.speaker-box-left {
    background-color: #2e719dcc;
    padding: 5pt;
    width: 100%;
    position:absolute;
    right: -60pt;
    top: -20px;
    z-index:1020;
    text-align: center;

}

.innomeat .row {
    margin-right:0px;
}

.speaker-box-right {
    background-color: #2e719dcc;
    padding: 5pt;
    width: 100%;
    position:absolute;
    left: -200px;
    top: -20px;
    text-align: center;
}

.devops h1 {
  text-align: left;
}

section img {
  width: 80%;
}

section h1 {
  text-transform: uppercase;
  color: #2e719d;
  font-weight: bold;
  font-size: 40pt;
  text-align: center;
}

.cta {
  text-transform: uppercase;
  background-color: #fff;
  padding: 5px 20px 5px 20px;
  font-size: 22pt;
  font-weight: bolder;
  border-radius: 2px;
}

.cta-deadline {
    font-size: 16pt;
    font-weight: bolder;
    padding-top: 30pt;
}

a:link.cta {
    color: #2e719d;
}

a:visited.cta {
    color: #2e719d;
}

a:active.cta {
    color: #2e719d;
}

.anchor {
    position:absolute;
    top: -150px;
}

.innomeat {
  position: relative;
  padding-top:30pt;
  padding-bottom: 30pt;
}

.innomeat h1 {
  text-align:center;
  color: #fff;
}


.outlinecontainer {
  width: 100%;
  padding: 10pt;
}

.innomeat .outlinebox-left {
  background-color: #2e719d;
}

.outlinebox-left {
  left: 0px;
  width: 50%;
}

.innomeat-whitebox {
  margin-top: 30pt;
  padding: 15pt;
  background-color: #ffffffa0;
  color: #000;
  width: 60%;
  margin-bottom:30pt;
}

.innomeat-whitebox h2 {
  color: #2e719d;
  font-weight: bolder;
}

.sponsor-logo img{
    width: 40%;
}

.location h1 {
    text-align:left;
}

.location-map {
    width: 80%;
}

.location-address {
    margin-top: 30pt;
}



footer {
    background-color: #2e719d;
    color: #fff;
}

footer h3 {
    font-size: 14pt;
    font-weight: bold;
}

